# FastBertTokenizer

./: .editorconfig  .gitignore  CodeCoverage.runsettings  Directory.Build.props  Directory.Packages.props  FastBertTokenizer.sln  FastBertTokenizer.slnx  LICENSE  README.md  global.json  nuget.config  test-aot-compatibility.ps1  version.json
.github/workflows/: benchmark-rust.yml  benchmark.yml  ci-aot.yml  ci.yml  dotnet-build.yml  pack.yml  test-report.yml
data/issue-100/: tokenizer.json
docfx/: docfx.json  filterConfig.yml  index.md  toc.yml
src/Benchmarks/: Benchmarks.csproj  BertTokenizerLibBaaiBgeTokenizer.cs  CompareToSharpToken.cs  CorpusReader.cs  NotImplementedExtensions.cs  OtherLibs.cs  Program.cs  TokenizeSpeed.cs  packages.lock.json
src/FastBertTokenizer.AotCompatibility.TestApp/: FastBertTokenizer.AotCompatibility.TestApp.csproj  Program.cs  packages.lock.json
src/FastBertTokenizer.Tests/: AssertContracts.cs  AsyncBatchEnumeratorVsHuggingface.cs  Backports.cs  BatchEnumerators.cs  BgeVocabFixture.cs  CompareBatched.cs  CompareDifferentEncodeFlavors.cs  CompareToHuggingfaceTokenizer.cs  CompareWikipediaToHuggingfaceTokenizer.cs  Decode.cs  FastBertTokenizer.Tests.csproj  LoadTokenizer.cs  RestBaaiBgeTokenizer.cs  Stride.cs  WikipediaSimpleData.cs  packages.lock.json
src/HuggingfaceTokenizer/BenchRust/: Cargo.toml  README.md
src/HuggingfaceTokenizer/BenchRust/benches/: like_huggingface.rs  my_benchmark.rs
src/HuggingfaceTokenizer/BenchRust/benches/common/: mod.rs
src/HuggingfaceTokenizer/BenchRust/src/: lib.rs  main.rs
(+64 files in other folders)
